# geodot

./: .gitignore  README.md  SKILL.md  eslint.config.js  package-lock.json  package.json  pyproject.toml
.github/workflows/: publish.yml  test.yml
js/src/: index.js
js/tests/: e2e.test.js  geodot.test.js
python/geodot/: __init__.py  cli.py  core.py
python/tests/: test_e2e.py  test_geodot.py
rust/: Cargo.toml
rust/src/: lib.rs  main.rs
rust/tests/: e2e.rs
scripts/: pre-commit
