[build-system]
requires = ["hatchling>=1.30.1"]
build-backend = "hatchling.build"

[project]
name = "geodot"
version = "0.1.11"
description = "Download satellite map tiles from the command line or as a Python library"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT OR Apache-2.0"
authors = [{ name = "geodot contributors" }]
keywords = ["maps", "tiles", "satellite", "gis"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3 :: Only",
]

[project.scripts]
geodot = "geodot.cli:main"

[project.optional-dependencies]
test = ["pytest>=9.1.1"]
dev = ["ruff>=0.15.20"]

[tool.hatch.build.targets.wheel]
packages = ["python/geodot"]

[tool.pytest.ini_options]
testpaths = ["python/tests"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
