[package]
name = "geodot"
version = "0.1.14"
edition = "2024"
rust-version = "1.85"
description = "Download satellite map tiles from the command line or as a Rust library"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ArgusPano/geodot"
readme = "../README.md"

[lib]
name = "geodot"
path = "src/lib.rs"

[[bin]]
name = "geodot"
path = "src/main.rs"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
reqwest = { version = "0.13.4", default-features = false, features = ["rustls", "gzip", "brotli"] }
tokio = { version = "1.52.3", features = ["full"] }
anyhow = "1.0.103"
rand = "0.10.1"
futures = "0.3.32"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
